Roundcube Webmail SieveRules
============================

2009 05 31
==========
 * Use list.js from the core

2009 05 30
==========
 * Added config var to auto load default rules when no user ones exist and skip setup screen
 * Added support ESC key to stop dragging
 * Added support for enotify and imap4flags
 * Added delete icon
 * Fixed JS bug when adding second rule

2009 05 25
==========
 * Fixed bug in rule moving

2009 05 24
==========
 * Added support for plugin template system
 * Added up/down/delete key support on the filters list
 * Added ability to drag examples to filters list
 * Added ability to drag rules within the filter list to change the order
 * Fixed display bug when deleting penultimate rule

2009 05 19
==========
 * Swapped decrypt_passwd for decrypt

2009 05 12
==========
 * Improved INGO rule filter

2009 05 09
==========
 * Added basic import system
 * Added Advanced editor - allows for editing of sieve file directly
 * Moved example rules to more obvious position
 * Updated list.js to latest version

2009 05 03
==========
 * Set busy while moving filter

2009 04 27
==========
 * Updated de_DE
 * Small changes to init functions for when labels are added to UI

Version 1.0-BETA
=================
 * Translated from sieverules patch
 * Added support for default rules file
 * Added support for example rules file
 * Expanded pre-defined rules to include comparator option